--- a/css/viz.css
+++ b/css/viz.css
@@ -35,7 +35,7 @@
 
 .chartTitle {
     font-family: sans-serif;
-    font-size: .75em;
+    font-size: 1em;
     font-weight: bold;
 }
 
@@ -99,7 +99,24 @@ option {
     display: inline-block;
     line-height: 1em;
 }
+.firelabel {
+    position: absolute;
+    height: 50px;
+    min-width: 100px;
+    color: #5d5d89;
+    background-color: #fff5f0;
+    border: solid medium #fc9272;
+    border-radius: 10px;
+    padding: 5px 10px;
+    top: -75px;
+}
 
+.firelabel h2 {
+    margin: 0 20px 0 0;
+    padding: 0;
+    display: inline-block;
+    line-height: 1em;
+}
 .main-container {
     display: flex;
     flex-direction: row;
@@ -153,7 +170,19 @@ option {
     height: 100%;
 }
 
-.accordion {
+.accordionSection1 {
+    margin-top: 5px;
+    background-color: #e0c7b6;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+.accordionSection2 {
     margin-top: 5px;
     background-color: #e0c7b6;
     color: #444;
@@ -166,7 +195,12 @@ option {
     transition: 0.4s;
 }
 
-.active, .accordion:hover {
+
+.active, .accordionSection1:hover {
+    background-color: #e0c7b6;
+}
+
+.active, .accordionSection2:hover {
     background-color: #e0c7b6;
 }
 
