--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .header {
     background: #0f421d;
-    color: darkgoldenrod;
+    color: #FFE363;
     display: flex;
     flex-direction: row;
     height: 60px;
@@ -13,12 +13,14 @@ body {
     overflow: hidden;
     padding-right: 10px;
     text-align: center;
+    font-size: 20px;
 }
 
 .header h1 {
-    color: darkorange;
+    color: #FFE363;
     margin-left: 20px;
     margin-top: 15px;
+    font-size: 20px;
 }
 
 .header button {
@@ -150,7 +152,7 @@ div.aboutdiv {
 }
 
 .splash, .data-page-splash h2, p {
-    color: #cc9c33;
+    color: #FFE363;
 }
 
 .splash-close-btn {
@@ -171,5 +173,4 @@ div.aboutdiv {
 .data-page-splash p {
     display: inline;
 }
-
 
